==> apache/nuttx/arch/arm/src/stm32l4/stm32l4_qencoder.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/sensors/qencoder.h>
#include <arch/board/board.h>
#include "chip.h"
#include "arm_internal.h"
#include "arm_arch.h"
#include "stm32l4.h"
#include "stm32l4_gpio.h"
#include "stm32l4_tim.h"
#include "stm32l4_qencoder.h"
#  define HAVE_32BIT_TIMERS   1
#  define HAVE_16BIT_TIMERS   1
#define TIM1_BITWIDTH         16
#define TIM2_BITWIDTH         32
#define TIM3_BITWIDTH         16
#define TIM4_BITWIDTH         16
#define TIM5_BITWIDTH         32
#define TIM8_BITWIDTH         16
#  define HAVE_MIXEDWIDTH_TIMERS 1
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_NOFILT
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FCKINT2
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FCKINT4
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FCKINT8
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd26
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd28
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd46
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd48
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd86
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd88
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd165
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd166
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd168
#      define STM32L4_QENCODER_ICF GTIM_CCMR_ICF_FDTSd325

static void stm32l4_dumpregs(FAR struct stm32l4_lowerhalf_s *priv,
                             FAR const char *msg)
{
  sninfo("%s:\n", msg);
  sninfo("  CR1: %04x CR2:  %04x SMCR:  %08x DIER:  %04x\n",
         stm32l4_getreg16(priv, STM32L4_GTIM_CR1_OFFSET),
         stm32l4_getreg16(priv, STM32L4_GTIM_CR2_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_SMCR_OFFSET),
         stm32l4_getreg16(priv, STM32L4_GTIM_DIER_OFFSET));
  sninfo("   SR: %04x EGR:  %04x CCMR1: %08x CCMR2: %08x\n",
         stm32l4_getreg16(priv, STM32L4_GTIM_SR_OFFSET),
         stm32l4_getreg16(priv, STM32L4_GTIM_EGR_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_CCMR1_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_CCMR2_OFFSET));
  sninfo(" CCER: %04x CNT:  %08x PSC:   %04x ARR:   %08x\n",
         stm32l4_getreg16(priv, STM32L4_GTIM_CCER_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_CNT_OFFSET),
         stm32l4_getreg16(priv, STM32L4_GTIM_PSC_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_ARR_OFFSET));
  sninfo(" CCR1: %08x CCR2: %08x\n",
         stm32l4_getreg32(priv, STM32L4_GTIM_CCR1_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_CCR2_OFFSET));
  sninfo(" CCR3: %08x CCR4: %08x\n",
         stm32l4_getreg32(priv, STM32L4_GTIM_CCR3_OFFSET),
         stm32l4_getreg32(priv, STM32L4_GTIM_CCR4_OFFSET));
#if defined(CONFIG_STM32L4_TIM1_QE) || defined(CONFIG_STM32L4_TIM8_QE)
  if (priv->config->timid == 1 || priv->config->timid == 8)
    {
      sninfo("  RCR: %04x BDTR: %04x DCR:   %04x DMAR:  %04x\n",
             stm32l4_getreg16(priv, STM32L4_ATIM_RCR_OFFSET),
             stm32l4_getreg16(priv, STM32L4_ATIM_BDTR_OFFSET),
             stm32l4_getreg16(priv, STM32L4_ATIM_DCR_OFFSET),
             stm32l4_getreg16(priv, STM32L4_ATIM_DMAR_OFFSET));
    }
  else
#endif
    {
      sninfo("  DCR: %04x DMAR: %04x\n",
             stm32l4_getreg16(priv, STM32L4_GTIM_DCR_OFFSET),
             stm32l4_getreg16(priv, STM32L4_GTIM_DMAR_OFFSET));
    }
}

static int stm32l4_interrupt(int irq, FAR void *context, FAR void *arg)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)arg;
  uint16_t regval;

  DEBUGASSERT(priv != NULL);

  /* Verify that this is an update interrupt.  Nothing else is expected. */

  regval = stm32l4_getreg16(priv, STM32L4_GTIM_SR_OFFSET);
  DEBUGASSERT((regval & ATIM_SR_UIF) != 0);

  /* Clear the UIF interrupt bit */

  stm32l4_putreg16(priv, STM32L4_GTIM_SR_OFFSET, regval & ~GTIM_SR_UIF);

  /* Check the direction bit in the CR1 register and add or subtract the
   * maximum value, as appropriate.
   */

  regval = stm32l4_getreg16(priv, STM32L4_GTIM_CR1_OFFSET);
  if ((regval & ATIM_CR1_DIR) != 0)
    {
      priv->position -= (int32_t)0x0000ffff;
    }
   else
    {
      priv->position += (int32_t)0x0000ffff;
    }

  return OK;
}

static int stm32l4_shutdown(FAR struct qe_lowerhalf_s *lower)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
  irqstate_t flags;
  uint32_t regaddr;
  uint32_t regval;
  uint32_t resetbit;
  uint32_t pincfg;

  /* Disable the update/global interrupt at the NVIC */

  flags = enter_critical_section();
  up_disable_irq(priv->config->irq);

  /* Detach the interrupt handler */

  irq_detach(priv->config->irq);

  /* Disable interrupts momentary to stop any ongoing timer processing and
   * to prevent any concurrent access to the reset register.
   */

  /* Disable further interrupts and stop the timer */

  stm32l4_putreg16(priv, STM32L4_GTIM_DIER_OFFSET, 0);
  stm32l4_putreg16(priv, STM32L4_GTIM_SR_OFFSET, 0);

  /* Determine which timer to reset */

  switch (priv->config->timid)
    {
#ifdef CONFIG_STM32L4_TIM1_QE
      case 1:
        regaddr  = STM32L4_RCC_APB2RSTR;
        resetbit = RCC_APB2RSTR_TIM1RST;
        break;
#endif
#ifdef CONFIG_STM32L4_TIM2_QE
      case 2:
        regaddr  = STM32L4_RCC_APB1RSTR1;
        resetbit = RCC_APB1RSTR1_TIM2RST;
        break;
#endif
#ifdef CONFIG_STM32L4_TIM3_QE
      case 3:
        regaddr  = STM32L4_RCC_APB1RSTR1;
        resetbit = RCC_APB1RSTR1_TIM3RST;
        break;
#endif
#ifdef CONFIG_STM32L4_TIM4_QE
      case 4:
        regaddr  = STM32L4_RCC_APB1RSTR1;
        resetbit = RCC_APB1RSTR1_TIM4RST;
        break;
#endif
#ifdef CONFIG_STM32L4_TIM5_QE
      case 5:
        regaddr  = STM32L4_RCC_APB1RSTR1;
        resetbit = RCC_APB1RSTR1_TIM5RST;
        break;
#endif
#ifdef CONFIG_STM32L4_TIM8_QE
      case 8:
        regaddr  = STM32L4_RCC_APB2RSTR;
        resetbit = RCC_APB2RSTR_TIM8RST;
        break;
#endif
      default:
        return -EINVAL;
    }

  /* Reset the timer - stopping the output and putting the timer back
   * into a state where stm32l4_start() can be called.
   */

  regval  = getreg32(regaddr);
  regval |= resetbit;
  putreg32(regval, regaddr);

  regval &= ~resetbit;
  putreg32(regval, regaddr);
  leave_critical_section(flags);

  sninfo("regaddr: %08x resetbit: %08x\n", regaddr, resetbit);
  stm32l4_dumpregs(priv, "After stop");

  /* Put the TI1 GPIO pin back to its default state */

  pincfg  = priv->config->ti1cfg & (GPIO_PORT_MASK | GPIO_PIN_MASK);
  pincfg |= STM32L4_GPIO_INPUT_FLOAT;

  stm32l4_configgpio(pincfg);

  /* Put the TI2 GPIO pin back to its default state */

  pincfg  = priv->config->ti2cfg & (GPIO_PORT_MASK | GPIO_PIN_MASK);
  pincfg |= STM32L4_GPIO_INPUT_FLOAT;

  stm32l4_configgpio(pincfg);
  return OK;
}

static int stm32l4_position(FAR struct qe_lowerhalf_s *lower, FAR int32_t *pos)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
#ifdef HAVE_16BIT_TIMERS
  int32_t position;
  int32_t verify;
  uint32_t count;

  DEBUGASSERT(lower && priv->inuse);

  /* Loop until we are certain that no interrupt occurred between samples */

  do
    {
      /* Don't let another task preempt us until we get the measurement.  The timer
       * interrupt may still be processed
       */

      sched_lock();
      position = priv->position;
      count    = stm32l4_getreg32(priv, STM32L4_GTIM_CNT_OFFSET);
      verify   = priv->position;
      sched_unlock();
    }
  while (position != verify);

  /* Return the position measurement */

  *pos = position + (int32_t)count;
#else
  /* Return the counter value */

  *pos = (int32_t)stm32l4_getreg32(priv, STM32L4_GTIM_CNT_OFFSET);
#endif
  return OK;
}

static int stm32l4_reset(FAR struct qe_lowerhalf_s *lower)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
#ifdef HAVE_16BIT_TIMERS
  irqstate_t flags;

  sninfo("Resetting position to zero\n");
  DEBUGASSERT(lower && priv->inuse);

  /* Reset the timer and the counter.  Interrupts are disabled to make this atomic
   * (if possible)
   */

  flags = enter_critical_section();
  stm32l4_putreg32(priv, STM32L4_GTIM_CNT_OFFSET, 0);
  priv->position = 0;
  leave_critical_section(flags);
#else
  sninfo("Resetting position to zero\n");
  DEBUGASSERT(lower && priv->inuse);

  /* Reset the counter to zero */

  stm32l4_putreg32(priv, STM32L4_GTIM_CNT_OFFSET, 0);
#endif
  return OK;
}

int stm32l4_qeinitialize(FAR const char *devpath, int tim)
{
  FAR struct stm32l4_lowerhalf_s *priv;
  int ret;

  /* Find the pre-allocated timer state structure corresponding to this timer */

  priv = stm32l4_tim2lower(tim);
  if (!priv)
    {
      snerr("ERROR: TIM%d support not configured\n", tim);
      return -ENXIO;
    }

  /* Make sure that it is available */

  if (priv->inuse)
    {
      snerr("ERROR: TIM%d is in-use\n", tim);
      return -EBUSY;
    }

  /* Register the priv-half driver */

  ret = qe_register(devpath, (FAR struct qe_lowerhalf_s *)priv);
  if (ret < 0)
    {
      snerr("ERROR: qe_register failed: %d\n", ret);
      return ret;
    }

  /* Make sure that the timer is in the shutdown state */

  stm32l4_shutdown((FAR struct qe_lowerhalf_s *)priv);

  /* The driver is now in-use */

  priv->inuse = true;
  return OK;
}
